# freebie-panel

./: .gitignore  db.sqlite3  docker-compose.yml  dockerfile  manage.py  requirements.txt
core/: settings.py  urls.py
freebiepanel/: asgi.py  settings.py  urls.py  wsgi.py
managament/: admin.py  models.py  serializers.py  views.py
managament/migrations/: 0001_initial.py
person/: admin.py  models.py
person/migrations/: 0001_initial.py  0002_rename_pessoa_person.py  0003_rename_data_nascimento_person_birth_date_and_more.py  0004_alter_person_company_id_alter_person_phone.py  0005_alter_person_phone.py  0006_remove_person_address_person_address_id.py  0007_alter_person_address_id_alter_person_total_income.py  0008_address.py  0009_company.py  0010_business_hours.py  0011_remove_company_address_id_remove_person_address_id_and_more.py  0012_item.py  0013_alter_item_reservation_status_trasaction.py  0014_rename_trasaction_transaction_and_more.py  0015_rename_person_transaction_item_id_and_more.py
src/: README.md  db.sqlite3  pyproject.toml
src/core/: settings.py  urls.py
src/managament/: admin.py  models.py  serializers.py  views.py
src/managament/migrations/: 0001_initial.py
